@@ -34,6 +34,7 @@ from addict import Dict as NSDict
 import util
 from util import run, instance_metadata, project_metadata, seperate
 from util import nodeset_prefix, nodeset_names, static_nodeset
+from util import access_secret_version
 from util import lkp, cfg, dirs, slurmdirs
 import slurmsync
 
@@ -534,7 +535,6 @@ def resolve_network_storage(partition_name=None):
 
     default_mounts = (
         slurmdirs.etc,
-        dirs.munge,
         dirs.home,
         dirs.apps,
     )
@@ -703,9 +703,12 @@ def setup_sync_cronjob():
 def setup_jwt_key():
     jwt_key = slurmdirs.state/'jwt_hs256.key'
 
-    if cfg.jwt_key:
+    secret_name = f"{cfg.slurm_cluster_name}-slurm-secret-jwt_key"
+    key = access_secret_version(util.project, secret_name)
+
+    if key:
         with (jwt_key).open('w') as f:
-            f.write(cfg.jwt_key)
+            f.write(key)
     else:
         run("dd if=/dev/urandom bs=32 count=1 >"+str(jwt_key), shell=True)
 
@@ -728,9 +731,12 @@ def setup_slurmd_cronjob():
 def setup_munge_key():
     munge_key = dirs.munge/'munge.key'
 
-    if cfg.munge_key:
+    secret_name = f"{cfg.slurm_cluster_name}-slurm-secret-munge_key"
+    key = access_secret_version(util.project, secret_name)
+
+    if key:
         with (munge_key).open('w') as f:
-            f.write(cfg.munge_key)
+            f.write(key)
     else:
         run("create-munge-key -f", timeout=30)
 
@@ -858,6 +864,7 @@ def setup_login():
     log.info("Setting up login")
     install_custom_scripts()
 
+    setup_munge_key()
     setup_network_storage()
     run("systemctl restart munge")
     run("systemctl restart slurmeventd", timeout=30)
@@ -885,6 +892,7 @@ def setup_compute():
 
     run_custom_scripts()
 
+    setup_munge_key()
     setup_slurmd_cronjob()
     run("systemctl restart munge", timeout=30)
     run("systemctl enable slurmd", timeout=30)
