@@ -30,12 +30,6 @@ output "munge_key" {
   sensitive   = true
 }
 
-output "jwt_key" {
-  description = "Cluster jwt authentication key."
-  value       = local.jwt_key
-  sensitive   = true
-}
-
 output "partitions" {
   description = "Cluster partitions."
   value       = local.partitions
